fix picture position

--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -42,13 +42,13 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" minimumZoomScale="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="Gw1-oS-liY">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-1s-XTC">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-1s-XTC">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" name="YP Black (iOS)"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4tC-hX-Vdj" userLabel="Share Button">
-                                        <rect key="frame" x="162.66666666666666" y="745" width="50" height="50"/>
+                                        <rect key="frame" x="162.66666666666666" y="762" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="MIf-d4-UF4"/>
                                             <constraint firstAttribute="height" constant="50" id="doi-6U-9ot"/>
@@ -83,13 +83,13 @@
                         <viewLayoutGuide key="safeArea" id="OTS-Ax-21Q"/>
                         <color key="backgroundColor" name="YP Black (iOS)"/>
                         <constraints>
-                            <constraint firstItem="OTS-Ax-21Q" firstAttribute="top" secondItem="Gw1-oS-liY" secondAttribute="top" id="86B-6c-iI9"/>
                             <constraint firstItem="Gw1-oS-liY" firstAttribute="trailing" secondItem="OTS-Ax-21Q" secondAttribute="trailing" id="9GT-gr-fx7"/>
+                            <constraint firstItem="Gw1-oS-liY" firstAttribute="top" secondItem="Sbt-hC-8xv" secondAttribute="top" id="RXE-xB-IXD"/>
                             <constraint firstItem="0PY-rb-0Pq" firstAttribute="top" secondItem="OTS-Ax-21Q" secondAttribute="top" constant="8" id="Va5-D1-sgT"/>
-                            <constraint firstItem="OTS-Ax-21Q" firstAttribute="bottom" secondItem="4tC-hX-Vdj" secondAttribute="bottom" constant="17" id="XA8-oK-cdQ"/>
+                            <constraint firstItem="OTS-Ax-21Q" firstAttribute="bottom" secondItem="4tC-hX-Vdj" secondAttribute="bottom" id="XA8-oK-cdQ"/>
                             <constraint firstItem="4tC-hX-Vdj" firstAttribute="centerX" secondItem="OTS-Ax-21Q" secondAttribute="centerX" id="kqP-KB-mCF"/>
-                            <constraint firstItem="Gw1-oS-liY" firstAttribute="bottom" secondItem="OTS-Ax-21Q" secondAttribute="bottom" id="nff-gw-6lY"/>
                             <constraint firstItem="0PY-rb-0Pq" firstAttribute="leading" secondItem="OTS-Ax-21Q" secondAttribute="leading" constant="8" id="oHV-K8-Ml5"/>
+                            <constraint firstAttribute="bottom" secondItem="Gw1-oS-liY" secondAttribute="bottom" id="tv9-Zj-txh"/>
                             <constraint firstItem="OTS-Ax-21Q" firstAttribute="leading" secondItem="Gw1-oS-liY" secondAttribute="leading" id="xSK-Uq-Qve"/>
                         </constraints>
                     </view>
