--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="Vtu-zn-rqb" kind="relationship" relationship="viewControllers" id="BjY-Bb-XF0"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lZD-yZ-OXY"/>
+                        <segue destination="Vtu-zn-rqb" kind="relationship" relationship="viewControllers" id="cMo-8C-HOz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mOK-iz-fIF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
