--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_of_unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="zQM-95-26O">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoOfUnsplash" translatesAutoresizingMaskIntoConstraints="NO" id="zQM-95-26O">
                                 <rect key="frame" x="157.66666666666666" y="406" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="zQM-95-26O" secondAttribute="height" multiplier="1:1" id="AzQ-jG-8Fe"/>
@@ -149,7 +149,7 @@
                                             <constraint firstAttribute="height" constant="50" id="doi-6U-9ot"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="share_button"/>
+                                        <state key="normal" image="shareButton"/>
                                         <connections>
                                             <action selector="didTapShareButton:" destination="1NR-9V-7aZ" eventType="touchUpInside" id="tT9-J6-2RB"/>
                                         </connections>
@@ -169,7 +169,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="nav_back_button"/>
+                                <state key="normal" image="navBackButton"/>
                                 <connections>
                                     <action selector="didTapBackButton" destination="1NR-9V-7aZ" eventType="touchUpInside" id="JAQ-UG-oej"/>
                                 </connections>
@@ -234,7 +234,10 @@
                                                         <constraint firstAttribute="height" constant="44" id="Mu5-cH-rMS"/>
                                                     </constraints>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="ActiveLikeButton"/>
+                                                    <state key="normal" image="likeButtonOff"/>
+                                                    <connections>
+                                                        <action selector="likeButtonClicked:" destination="Lo2-TU-4K8" eventType="touchUpInside" id="o4G-26-uBD"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 сентября 2024" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSJ-kf-nJd" userLabel="Date Label">
                                                     <rect key="frame" x="24.000000000000007" y="196" width="105.66666666666669" height="16"/>
@@ -278,7 +281,7 @@
                             <constraint firstAttribute="bottom" secondItem="8XP-pr-f1W" secondAttribute="bottom" id="rVk-lj-92v"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="630-QG-1su"/>
+                    <tabBarItem key="tabBarItem" title="" image="tabEditorialActive" id="630-QG-1su"/>
                     <navigationItem key="navigationItem" id="kjv-dq-yh1"/>
                     <connections>
                         <outlet property="tableView" destination="8XP-pr-f1W" id="NUB-HK-k37"/>
@@ -311,12 +314,12 @@
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
-        <image name="ActiveLikeButton" width="42" height="42"/>
-        <image name="logo_of_unsplash" width="60" height="60"/>
-        <image name="nav_back_button" width="24" height="24"/>
-        <image name="share_button" width="51" height="51"/>
+        <image name="likeButtonOff" width="42" height="42"/>
+        <image name="logoOfUnsplash" width="60" height="60"/>
+        <image name="navBackButton" width="24" height="24"/>
+        <image name="shareButton" width="51" height="51"/>
         <image name="singleImageViewControllerPlug" width="83" height="75"/>
-        <image name="tab_editorial_active" width="30" height="30"/>
+        <image name="tabEditorialActive" width="30" height="30"/>
         <namedColor name="YP Black (iOS)">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
